# embed

./: .clang-format  .cmake-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  embed.cpp  octal.hpp  usage.cpp
cmake/: add_embedded_file.cmake
example/: CMakeLists.txt  embed_example.cpp  lorem.txt
src/: CMakeLists.txt  embed.cpp  octal.cpp  usage.cpp  usage.hpp
test/: CMakeLists.txt  embed_test.cpp
